Fix wildcards in absolute path dependencies

The expandWildcards function assumed that every passed path is relative
and unconditionally prepended dirPath.

Fixes: QTCREATORBUG-27645
Change-Id: I9759e3885cc3d4890a06093b6f80974fdcefc086
Reviewed-by: Oliver Wolff <oliver.wolff@qt.io>